crates/graphql-orm/tests/ui/projection_string_field.stderr
error: projection fields must contain Rust field identifiers, not strings or paths
 --> tests/ui/projection_string_field.rs:5:63
  |
5 | #[graphql_orm(projection(name = "StringProjection", fields = ["id"]))]
  |                                                               ^^^^
